--- a/app/src/main/res/layout/activity_nueva_tarea.xml
+++ b/app/src/main/res/layout/activity_nueva_tarea.xml
@@ -2,8 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="350dp"
+    android:layout_height="250dp"
     tools:context=".NuevaTareaActivity">
 
     <LinearLayout
@@ -12,11 +12,12 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:gravity="center"
         android:layout_height="match_parent">
 
         <EditText
             android:id="@+id/edt_titulo"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:hint="Título de la tarea:"
@@ -24,7 +25,7 @@
 
         <EditText
             android:id="@+id/edt_descripcion"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:hint="Descripción:"
@@ -32,7 +33,7 @@
 
         <Button
             android:id="@+id/btn_guardar"
-            android:layout_width="match_parent"
+            android:layout_width="250dp"
             android:text="Guardar"
             android:textColor="@color/white"
             android:backgroundTint="@color/colorPrimary"
