--- a/app/src/main/res/layout/activity_nueva_tarea.xml
+++ b/app/src/main/res/layout/activity_nueva_tarea.xml
@@ -31,6 +31,16 @@
             android:hint="Descripción:"
             />
 
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="250dp"
+            android:spinnerMode="dropdown"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content">
+
+        </Spinner>
+
         <Button
             android:id="@+id/btn_guardar"
             android:layout_width="250dp"
