--- a/app/src/main/res/layout/tarea_item.xml
+++ b/app/src/main/res/layout/tarea_item.xml
@@ -19,6 +19,15 @@
             tools:text = "Tarea"
             android:textColor="@color/colorPrimaryText"
             android:textSize="18sp"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/txt_estado"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/txt_estado"
+            android:layout_width="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="Estado"
+            android:textSize="14sp"
             android:layout_height="wrap_content" />
 
         <TextView
