--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_tareas"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/tarea_item">
-
-    </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_tareas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/tarea_item"/>
 
         <android.support.design.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
@@ -29,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             app:fabCradleRoundedCornerRadius="10dp"
+            app:hideOnScroll="true"
             app:backgroundTint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="@id/recycler_tareas"/>
 
