--- a/app/src/main/res/layout/tarea_item.xml
+++ b/app/src/main/res/layout/tarea_item.xml
@@ -33,7 +33,7 @@
         <TextView
             android:id="@+id/txt_descripcion"
             android:layout_width="wrap_content"
-            tools:text = "Descripcion de tarea"
+            tools:text = "Descripcion de tarea Descripcion de tarea Descripcion de tarea Descripcion de tarea"
             android:textSize="14sp"
             android:layout_below="@id/txt_titulo"
             android:layout_height="wrap_content" />
