--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,20 @@
             android:id="@+id/recycler_tareas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="55dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/tarea_item"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_gravity="bottom"
+            android:visibility="gone"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="@id/recycler_tareas"
+            android:text="@string/tutorial"
+            android:layout_height="wrap_content" />
 
         <android.support.design.bottomappbar.BottomAppBar
             android:id="@+id/bottomAppBar"
