--- a/app/src/main/res/layout/tarea_item.xml
+++ b/app/src/main/res/layout/tarea_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/cardview"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:backgroundTint="@color/white"
     android:layout_marginEnd="10dp"
     android:layout_marginStart="10dp"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp">
 
     <RelativeLayout
         android:padding="8dp"
