mejoras en interfaz

--- a/app/src/main/res/menu/bottom_appbar.xml
+++ b/app/src/main/res/menu/bottom_appbar.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menu_filtro"
-        android:title="Filtro"
+        android:title="Hola!"
         android:icon="@drawable/ic_arrow_up">
 
     </item>
